--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mtcs Web",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile:sass": "node-sass sass/main.scss resources/css/compiles-sass.css "
   },
   "repository": {
     "type": "git",
